--- a/app/src/main/res/layout/card_fav.xml
+++ b/app/src/main/res/layout/card_fav.xml
@@ -16,7 +16,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_main"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
@@ -37,24 +37,22 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="60dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="10dp"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:myImageUrl="@{forecast.current.weather.get(0).icon}"
-                app:srcCompat="@drawable/cloud" />
+                app:srcCompat="@drawable/fav_place" />
 
             <ImageButton
                 android:id="@+id/btn_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:layout_marginEnd="12dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="16dp"
                 android:background="@android:color/transparent"
                 android:onClick="@{()->action.onDeleteClick(forecast)}"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/delete" />
@@ -63,58 +61,17 @@
                 android:id="@+id/text_location"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:drawableLeft="@drawable/location_navy"
+                android:layout_marginEnd="8dp"
                 android:gravity="center"
                 android:inputType="textMultiLine|textImeMultiLine"
                 android:text="america/Los_angelos"
-                android:textColor="@color/navy"
+                android:textColor="@color/light_blue"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/text_desc"
-                app:layout_constraintEnd_toStartOf="@+id/text_tempNum"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintStart_toStartOf="@+id/text_desc"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/text_tempUnits"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="28dp"
-                android:layout_marginBottom="48dp"
-                android:text="°C"
-                android:textColor="@color/light_xl_blue"
-                android:textSize="22sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-            <TextView
-                android:id="@+id/text_tempNum"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-15dp"
-                android:fontFamily="sans-serif"
-                android:text="22"
-                android:textColor="@color/light_xl_blue"
-                android:textSize="48sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/text_tempUnits"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/text_desc"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Mostly Clear"
-                android:textColor="@color/light_xl_blue"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/text_tempNum"
+                app:layout_constraintEnd_toStartOf="@+id/btn_delete"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/text_location" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
