--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -31,6 +31,11 @@
             app:destination="@id/homeFragment"
             app:popUpTo="@id/splashFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_viewPagerFragment_to_startPrefFragment2"
+            app:destination="@id/startPrefFragment"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -66,7 +71,7 @@
         tools:layout="@layout/fragment_setting" />
     <fragment
         android:id="@+id/startPrefFragment"
-        android:name="com.example.myweatherapp.startPref.StartPrefFragment"
+        android:name="com.example.myweatherapp.startPref.view.StartPrefFragment"
         android:label="fragment_start_pref"
         tools:layout="@layout/fragment_start_pref" >
         <action
@@ -74,6 +79,14 @@
             app:destination="@id/homeFragment"
             app:popUpTo="@id/splashFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_startPrefFragment_to_mapsFragment"
+            app:destination="@id/mapsFragment" />
+        <argument
+            android:name="myLoc"
+            app:argType="com.google.android.gms.maps.model.LatLng"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/detailsFragment"
@@ -94,5 +107,8 @@
         <action
             android:id="@+id/action_mapsFragment_to_favoriteFragment"
             app:destination="@id/favoriteFragment" />
+        <action
+            android:id="@+id/action_mapsFragment_to_startPrefFragment"
+            app:destination="@id/startPrefFragment" />
     </fragment>
 </navigation>
